--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </tr>
       </table>
     </div>
+    <div class="handle">||</div>
     <div class="medium" id="codex">
       <h1>Codex</h1>
       <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
@@ -51,6 +52,7 @@
         </tr>
       </table>
     </div>
+    <div class="handle">||</div>
     <div class="medium" id="webpage">
       <h1>Webpage</h1>
       <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
@@ -69,6 +71,7 @@
         </tr>
       </table>
     </div>
+    <div class="handle">||</div>
     <div class="medium" id="website">
       <h1>Website</h1>
       <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
@@ -101,19 +104,17 @@
 
       <p>However, sometimes after the semester is over, I receive perplexing emails from students asking, &ldquo;So how do I actually make a website?&rdquo;</p>
 
-      <p>This sparked my own questioning. &ldquo;What is a website, anyway?&rdquo; It&rsquo;s easy to forget. Today there are millions of ways to make a website, and the abundance is daunting. But at its core, a website is still the same as ever
-        before:</p>
+      <p>This sparked my own questioning. &ldquo;What is a website, anyway?&rdquo; It&rsquo;s easy to forget. Today there are millions of ways to make a website, and the abundance is daunting. But at its core, a website is still the same as ever before:</p>
 
-      <p>A website is a file or bundle of files living on a server somewhere. A server is a computer that&rsquo;s always connected to the internet, so that when someone types your URL in, the server will offer up your website. Usually you have to pay
-        for a server. You also have to pay for a domain name, which is an understandable piece of language that points to an IP. An IP is a string of numbers that is an address to your server.</p>
+      <p>A website is a file or bundle of files living on a server somewhere. A server is a computer that&rsquo;s always connected to the internet, so that when someone types your URL in, the server will offer up your website. Usually you have to pay for a server. You also have to pay for a domain name, which is an understandable piece of language that points to an IP. An IP is a string of numbers that is an address to your server.</p>
 
       <p>Links (rendered default blue and underlined&mdash;they&rsquo;re the hypertext &ldquo;HT&rdquo; in HTML) are the oxygen of the web. Not all websites have links, but all links connect to other webpages, within the same site or elsewhere.</p>
 
       <p>But my students already know this! So when they ask me about actually making a website, they are referring to a website in the world &#8230; today.</p>
 
-      <p>It&rsquo;s healthy to acknowledge today&rsquo;s web is much different than the web many of us grew up using. So when they ask how to make a website (despite having already &ldquo;learned&rdquo;), they are alluding to the technological
-        friction and social pressures that often come along with creating and maintaining a website in 2018.</p>
+      <p>It&rsquo;s healthy to acknowledge today&rsquo;s web is much different than the web many of us grew up using. So when they ask how to make a website (despite having already &ldquo;learned&rdquo;), they are alluding to the technological friction and social pressures that often come along with creating and maintaining a website in 2018.</p>
     </div></div>
+    <div class="handle">||</div>
     <div class="medium" id="feed">
       <h1>Feed</h1>
       <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
