--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
   <div id="intro">
     <h1>The Medium is the Message?</h1>
-    <p>Content is digested in many different ways, largely as a result of the form that it is presented in. This  microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different "content-heavy" channels and abstracting them to their most crucial elements, differences and simularities between each  begin to reveal themselves. Scroll down to read five texts that discuss their corrosponding medium by challenging its form.</p>
+    <p>
+      Content is digested in many different ways, largely as a result of the form that it is presented in. This  microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different "content-heavy" channels and abstracting them to their most crucial elements, differences and simularities between each  begin to reveal themselves. Scroll down to read five texts that discuss their corrosponding medium by challenging its form.<br />
+      <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design, September 2020</span>
+    </p>
     <p id="hint">&darr;</p>
   </div>
   <div id="wrapper">
