Reorganization & gross iframes
stuff's broken

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Medium is the message</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="src/style.css" type="text/css">
 </head>
 
 <body>
@@ -19,159 +19,28 @@
   </div>
   <div id="wrapper">
     <div class="medium" id="scroll">
-      <h1>Scroll</h1>
-      <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
-      <table>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-      </table>
+      <iframe src="pages/scroll.html"></iframe>
     </div>
     <div class="handle">||</div>
     <div class="medium" id="codex">
-      <h1>Codex</h1>
-      <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
-      <table>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-      </table>
+      <iframe src="pages/codex.html"></iframe>
     </div>
     <div class="handle">||</div>
     <div class="medium" id="webpage">
-      <h1>Webpage</h1>
-      <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
-      <table>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-      </table>
+      <iframe src="pages/webpage.html"></iframe>
     </div>
     <div class="handle">||</div>
     <div class="medium" id="website">
-      <h1>Website</h1>
-      <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
-      <table>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-      </table>
-      <div class="medium-article">
-      <p class="title">My website is a shifting house next to a river of knowledge. What could yours be?<br>
-        <p class="caption">by Laurel Schwulst</p>
-      <hr />
-      <img src="http://tci-assets.s3.amazonaws.com/uploads/laurel-schwulst-cloud.png" />
-      <p class="caption">Here's a caption for this image. Here's some other stuff. More stuff.</p>
-
-      <p>For the past handful of years, I&rsquo;ve been teaching courses about interactive design and the internet.</p>
-
-      <p>I teach within art departments at universities, so we learn about the internet&rsquo;s impact on art&mdash;and vice versa&mdash;and how technological advance often coincides with artistic development.</p>
-
-      <p>In class, we make websites. To do this, we learn the elemental markup and code languages of the web&mdash;HTML, CSS, and some JavaScript.</p>
-
-      <p>However, sometimes after the semester is over, I receive perplexing emails from students asking, &ldquo;So how do I actually make a website?&rdquo;</p>
-
-      <p>This sparked my own questioning. &ldquo;What is a website, anyway?&rdquo; It&rsquo;s easy to forget. Today there are millions of ways to make a website, and the abundance is daunting. But at its core, a website is still the same as ever before:</p>
-
-      <p>A website is a file or bundle of files living on a server somewhere. A server is a computer that&rsquo;s always connected to the internet, so that when someone types your URL in, the server will offer up your website. Usually you have to pay for a server. You also have to pay for a domain name, which is an understandable piece of language that points to an IP. An IP is a string of numbers that is an address to your server.</p>
-
-      <p>Links (rendered default blue and underlined&mdash;they&rsquo;re the hypertext &ldquo;HT&rdquo; in HTML) are the oxygen of the web. Not all websites have links, but all links connect to other webpages, within the same site or elsewhere.</p>
-
-      <p>But my students already know this! So when they ask me about actually making a website, they are referring to a website in the world &#8230; today.</p>
-
-      <p>It&rsquo;s healthy to acknowledge today&rsquo;s web is much different than the web many of us grew up using. So when they ask how to make a website (despite having already &ldquo;learned&rdquo;), they are alluding to the technological friction and social pressures that often come along with creating and maintaining a website in 2018.</p>
-    </div></div>
+      <iframe src="pages/website.html"></iframe>
+    </div>
     <div class="handle">||</div>
     <div class="medium" id="feed">
-      <h1>Feed</h1>
-      <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
-      <table>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-        <tr>
-          <td>Thing</td>
-          <td>Second thing</td>
-        </tr>
-      </table>
+      <iframe src="pages/feed.html"></iframe>
     </div>
   </div>
-  
-  <script>
-  
-	let theHandleWeAreCurrentlyResizing = null;
-	let theHorizontalCoordinateOfTheMouseWhenAHandleIsClicked = null;
-	let theCurrentHorizontalCoordinateOfTheMouse = null;
-	
-	let columns = document.querySelectorAll(".medium");
-	let everyHandleElementOnThePage = document.querySelectorAll(".handle");
-	
-	everyHandleElementOnThePage.forEach(handle => {
-	  handle.onmousedown = event => {
-	    theHandleWeAreCurrentlyResizing = event.target;
-	    theHorizontalCoordinateOfTheMouseWhenAHandleIsClicked = event.clientX;
-	  };
-	});
-	
-	document.onmouseup = event => theHandleWeAreCurrentlyResizing = null;
-	document.onmousemove = event => theCurrentHorizontalCoordinateOfTheMouse = event.clientX;
-	
-	function update() {
-	  if(theHandleWeAreCurrentlyResizing !== null) {
-	    // we are holding a handle, resize the columns
-	    let theIndexOfTheHandleElementThatWeAreCurrentlyResizing = [].indexOf.call(everyHandleElementOnThePage, theHandleWeAreCurrentlyResizing);
-	    let columnWeAreGoingToExpand = columns[theIndexOfTheHandleElementThatWeAreCurrentlyResizing];
-	    let columnWeAreGoingToShrink = columns[theIndexOfTheHandleElementThatWeAreCurrentlyResizing + 1];
-	    columnWeAreGoingToExpand.style = "width: calc(20% + " + (theCurrentHorizontalCoordinateOfTheMouse - theHorizontalCoordinateOfTheMouseWhenAHandleIsClicked) + "px)";
-	    columnWeAreGoingToShrink.style = "width: calc(20% - " + (theCurrentHorizontalCoordinateOfTheMouse - theHorizontalCoordinateOfTheMouseWhenAHandleIsClicked) + "px)";
-	  }
-	  requestAnimationFrame(update); // calls update() once per frame (preferred over setInterval for browser optimisation when in background)
-	}
-	update();
-  
-  </script>
-  
+
+  <script src="src/scripts.js"></script>
+<div id="no-mobile"><p>Sorry – this microsite isn't mobile/tablet-friendly. Come back on your desktop!</p></div>
 </body>
 
 </html>
