--- a/pages/codex.html
+++ b/pages/codex.html
@@ -10,7 +10,7 @@
 
 <body style="padding: 1em">
   <h1 class="medium-title">Codex</h1>
-  <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
+  <p class="medium-intro">The Codex (commonly referred to as the book) takes information and segments it into multiple linked pages, much like the <span class="similar">Website</span> medium. Like the <span class="similar">Scroll</span> its content is static and limited only to text and image.</p>
   <table>
     <tr>
       <td>Length</td>
