--- a/pages/webpage.html
+++ b/pages/webpage.html
@@ -10,7 +10,7 @@
 
 <body style="padding: 1em">
   <h1 class="medium-title">Webpage</h1>
-  <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
+  <p class="medium-intro">In their most basic form, webpages are <span class="similar" >Scrolls</span> without physicality. Their behavior is identical in that  information is displayed in a continuous flow. One critical difference, however, is its ability to show dynamic and updating information, like <span class="similar">Websites</span> and <span class="similar">Feeds</span>.</p>
   <table>
     <tr>
       <td>Length</td>
