--- a/pages/website.html
+++ b/pages/website.html
@@ -10,7 +10,7 @@
 
 <body style="padding: 1em">
   <h1 class="medium-title">Website</h1>
-  <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
+  <p class="medium-intro">Websites consist of multiple <span class="similar">Webpages</span> linked together. Like a <span class="similar">Feed</span>content isn't consumed linearly like with the other selected mediums.</p>
   <table>
     <tr>
       <td>Length</td>
@@ -30,7 +30,6 @@
     <p class="caption">by Laurel Schwulst</p>
   <hr />
   <img src="http://tci-assets.s3.amazonaws.com/uploads/laurel-schwulst-cloud.png" />
-  <p class="caption">Here's a caption for this image. Here's some other stuff. More stuff.</p>
 
   <p>For the past handful of years, I&rsquo;ve been teaching courses about interactive design and the internet.</p>
 
