--- a/pages/feed.html
+++ b/pages/feed.html
@@ -10,7 +10,7 @@
 
 <body style="padding: 1em">
   <h1 class="medium-title">Feed</h1>
-  <p class="medium-intro">This is what is unique about scrolls. Interesting, huh? Here is another fake line because I don't feel like writing right now. Something else too. Help me.</p>
+  <p class="medium-intro">Feeds (like Twitter or Instagram) are unique in that their content is authored by all collective users instead of by a single/a few creators. Like <span class="similar">Webpages</span> and <span class="similar">Websites</span> content is dynamic and interactive.</p>
   <table>
     <tr>
       <td>Length</td>
