Layout change & some content

--- a/index.html
+++ b/index.html
@@ -4,16 +4,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Medium is the message</title>
+  <title>Scroll to feed and back again</title>
   <link rel="stylesheet" href="src/style.css" type="text/css">
+  <style>
+  #intro {
+    height: 100vh;
+    width: 100vw;
+    background-color: lemonchiffon;
+    z-index: 10; /* why doesn't this hide the shadow? */
+  }
+
+  #intro h1, #intro p {
+    padding: 1rem;
+  }
+
+  #intro h1 {
+    font-size: 10vw;
+    line-height: 0.9;
+    letter-spacing: -0.05em;
+  }
+
+  #intro p {
+    font-family: "Suisse Int'l", sans-serif;
+    font-size: 2em;
+    margin-left: 30vw;
+    text-indent: 0;
+    position: absolute;
+    bottom: 0;
+  }
+
+  #byline {
+    font-size: 1rem;
+  }
+
+  #hint {
+    font-family: "Suisse Works", serif !important;
+    margin-left: 0 !important;
+    font-size: 2em !important;
+    animation: bob 2s ease infinite;
+  }
+
+  @keyframes bob {
+    0%, 100% {
+      bottom: 0;
+    }
+    50% {
+      bottom: 1rem;
+    }
+  }
+  </style>
 </head>
 
 <body>
   <div id="intro">
-    <h1>The Medium is the Message?</h1>
+    <h1>Scroll to feed<br />and back again</h1>
     <p>
-      Content is digested in many different ways, largely as a result of the form that it is presented in. This  microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different "content-heavy" channels and abstracting them to their most crucial elements, differences and simularities between each  begin to reveal themselves. Scroll down to read five texts that discuss their corrosponding medium by challenging its form.<br />
-      <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design, September 2020</span>
+      <p>As technology has progressed, humans have defined and redefined the publication experience. Once hieroglyphs on clay tablets, now dynamic interfaces on Kindles and iPads, history has a way of repeating itself. The translation of papyrus scrolls to a &ldquo;scrolling&rdquo; webpage saw a similar evolution as well, proving that while we continue to innovate and upgrade, familiarity serves us well.<br /><br />
+
+      This microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different &quot;content-heavy&quot; channels and abstracting them to their most crucial elements, differences and similarities between each begin to reveal themselves. Scroll down to read five texts that challenge the form of their corresponding medium.<br />
+      <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design, September 2020</span></p>
     </p>
     <p id="hint">&darr;</p>
   </div>
