--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     height: 100vh;
     width: 100vw;
     background-color: lemonchiffon;
-    z-index: 10; /* why doesn't this hide the shadow? */
   }
 
   #intro h1, #intro p {
@@ -61,7 +60,7 @@
     <p>
       <p>As technology has progressed, humans have defined and redefined the publication experience. Once hieroglyphs on clay tablets, now dynamic interfaces on Kindles and iPads, history has a way of repeating itself. The translation of papyrus scrolls to a &ldquo;scrolling&rdquo; webpage saw a similar evolution as well, proving that while we continue to innovate and upgrade, familiarity serves us well.<br /><br />
 
-      This microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different &quot;content-heavy&quot; channels and abstracting them to their most crucial elements, differences and similarities between each begin to reveal themselves. Scroll down to read five texts that challenge the form of their corresponding medium.<br />
+      This microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different &quot;content-heavy&quot; channels and abstracting them to their most crucial elements, differences and similarities between each begin to reveal themselves. "Scroll" down to read five texts that challenge the form of their corresponding medium.<br />
       <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design, September 2020</span></p>
     </p>
     <p id="hint">&darr;</p>
@@ -72,7 +71,7 @@
     </div>
     <div class="handle">||</div>
     <div class="medium" id="codex">
-      <iframe src="pages/codex.html"></iframe>
+      <iframe src="pages/codex/codex-1.html"></iframe>
     </div>
     <div class="handle">||</div>
     <div class="medium" id="webpage">
@@ -80,7 +79,7 @@
     </div>
     <div class="handle">||</div>
     <div class="medium" id="website">
-      <iframe src="pages/website.html"></iframe>
+      <iframe src="pages/website/website-1.html"></iframe>
     </div>
     <div class="handle">||</div>
     <div class="medium" id="feed">
@@ -89,7 +88,7 @@
   </div>
 
   <script src="src/scripts.js"></script>
-<div id="no-mobile"><p>Sorry – this microsite isn't mobile/tablet-friendly. Come back on your desktop!</p></div>
+<div id="no-mobile"><p>Sorry – this microsite isn't optimized for your device. Come back on your desktop or resize your browser window!</p></div>
 </body>
 
 </html>
