--- a/pages/website/website-3.html
+++ b/pages/website/website-3.html
@@ -61,7 +61,7 @@
 
   <p>Simultaneously, a room can be flexible: you can shift its contents or even include a temporary partition, depending on occasion. You can also position elements in spatial juxtaposition, or create entrances to adjacent rooms through links.</p>
 
-  <p>In the early days of The Creative Independent, we sometimes thought of TCI&rsquo;s website like a house next to a river. We considered the interviews the flowing water, as they were our house&rsquo;s nutrients and source of life. We would collect and drink from the water every day. But sometimes, depending on its nutrient makeup, the water would change our house. We&rsquo;d wake up to see a new door where a picture frame once was. Knowledge became the architect.</p>
+  <p>In the early days of <a href="https://thecreativeindependent.com/">The Creative Independent</a>, we sometimes thought of TCI&rsquo;s website like a house next to a river. We considered the interviews the flowing water, as they were our house&rsquo;s nutrients and source of life. We would collect and drink from the water every day. But sometimes, depending on its nutrient makeup, the water would change our house. We&rsquo;d wake up to see a new door where a picture frame once was. Knowledge became the architect.</p>
 
   <p>Like any metaphor, it&rsquo;s not perfect. For better or worse, it&rsquo;s much more difficult to delete a building than a website.</p>
 
