--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
     background-color: lemonchiffon;
   }
 
-  #intro h1, #intro p {
+  #intro-info {
     padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    column-gap: 1rem;
+    text-indent: 0;
+    position: absolute;
+    bottom: 0;
+  }
+
+  #intro img {
+    width: 30%;
+    mix-blend-mode: darken;
   }
 
   #intro h1 {
+    padding: 1rem;
     font-size: 10vw;
     line-height: 0.9;
     letter-spacing: -0.05em;
@@ -26,10 +38,6 @@
   #intro p {
     font-family: "Suisse Int'l", sans-serif;
     font-size: 2em;
-    margin-left: 30vw;
-    text-indent: 0;
-    position: absolute;
-    bottom: 0;
   }
 
   #byline {
@@ -38,17 +46,16 @@
 
   #hint {
     font-family: "Suisse Works", serif !important;
-    margin-left: 0 !important;
-    font-size: 2em !important;
     animation: bob 2s ease infinite;
+    position: absolute;
   }
 
   @keyframes bob {
     0%, 100% {
-      bottom: 0;
+      bottom: 1rem;
     }
     50% {
-      bottom: 1rem;
+      bottom: 2rem;
     }
   }
   </style>
@@ -57,13 +64,16 @@
 <body>
   <div id="intro">
     <h1>Scroll to feed<br />and back again</h1>
-    <p>
+    <div id="intro-info">
+      <div>
+        <img src="src/img/stairs.gif"/>
+        <p id="hint">&darr;</p>
+      </div>
       <p>As technology has progressed, humans have defined and redefined the publication experience. Once hieroglyphs on clay tablets, now dynamic interfaces on Kindles and iPads, history has a way of repeating itself. The translation of papyrus scrolls to a &ldquo;scrolling&rdquo; webpage saw a similar evolution as well, proving that while we continue to innovate and upgrade, familiarity serves us well.<br /><br />
 
       This microsite is an experiment of this concept, an exploration of how we read what we read. By investigating five different &quot;content-heavy&quot; channels and abstracting them to their most crucial elements, differences and similarities between each begin to reveal themselves. "Scroll" down to read five texts that challenge the form of their corresponding medium.<br />
-      <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design, September 2020</span></p>
-    </p>
-    <p id="hint">&darr;</p>
+      <span id="byline">by <a href="https://jkh.design" target="_blank">Josh Krauth-Harding</a> for Publication Design. Illustration <a href="https://rafaeldearaujo.tumblr.com/">Rafael Araujo</a>.</span></p>
+    </div>
   </div>
   <div id="wrapper">
     <div class="medium" id="scroll">
