--- a/pages/codex/codex-5.html
+++ b/pages/codex/codex-5.html
@@ -32,15 +32,17 @@
     }
 
     .chris::before {
-      content: "KENNEALLY: ";
+      content: "KENNEALLY:";
+      margin-right: 0.25em;
       font-family: "Suisse Int'l", sans-serif;
-      font-weight: bold;
+      text-decoration: underline;
     }
 
     .amaranth::before {
-      content: "BORSUK: ";
+      content: "BORSUK:";
+      margin-right: 0.25em;
       font-family: "Suisse Int'l", sans-serif;
-      font-weight: bold;
+      text-decoration: underline;
     }
   </style>
 </head>
