--- a/pages/website/website-1.html
+++ b/pages/website/website-1.html
@@ -60,11 +60,11 @@
 
   <h3>What is a website?</h3>
 
-  <p>For the past handful of years, I&rsquo;ve been teaching courses about interactive design and the internet.</p>
+  <p>For the past handful of years, I&rsquo;ve been teaching courses about <a href="https://en.wikipedia.org/wiki/Interactive_design">interactive design</a> and the internet.</p>
 
   <p>I teach within art departments at universities, so we learn about the internet&rsquo;s impact on art&mdash;and vice versa&mdash;and how technological advance often coincides with artistic development.</p>
 
-  <p>In class, we make websites. To do this, we learn the elemental markup and code languages of the web&mdash;HTML, CSS, and some JavaScript.</p>
+  <p>In class, we make <a href="https://en.wikipedia.org/wiki/Website">websites</a>. To do this, we learn the elemental markup and code languages of the web&mdash;HTML, CSS, and some JavaScript.</p>
 
   <p>However, sometimes after the semester is over, I receive perplexing emails from students asking, &ldquo;So how do I actually make a website?&rdquo;</p>
 
@@ -72,13 +72,13 @@
 
   <p>A website is a file or bundle of files living on a server somewhere. A server is a computer that&rsquo;s always connected to the internet, so that when someone types your URL in, the server will offer up your website. Usually you have to pay for a server. You also have to pay for a domain name, which is an understandable piece of language that points to an IP. An IP is a string of numbers that is an address to your server.</p>
 
-  <p>Links (rendered default blue and underlined&mdash;they&rsquo;re the hypertext &ldquo;HT&rdquo; in HTML) are the oxygen of the web. Not all websites have links, but all links connect to other webpages, within the same site or elsewhere.</p>
+  <p>Links (rendered default blue and underlined&mdash;they&rsquo;re the hypertext &ldquo;HT&rdquo; in <a href="https://html.spec.whatwg.org/">HTML</a>) are the oxygen of the web. Not all websites have links, but all links connect to other webpages, within the same site or elsewhere.</p>
 
   <p>But my students already know this! So when they ask me about actually making a website, they are referring to a website in the world &#8230; today.</p>
 
-  <p>It&rsquo;s healthy to acknowledge today&rsquo;s web is much different than the web many of us grew up using. So when they ask how to make a website (despite having already &ldquo;learned&rdquo;), they are alluding to the technological friction and social pressures that often come along with creating and maintaining a website in 2018.</p>
+  <p>It&rsquo;s healthy to acknowledge today&rsquo;s web is much different than <a href="https://theoldnet.com/">the web many of us grew up using.</a> So when they ask how to make a website (despite having already &ldquo;learned&rdquo;), they are alluding to the technological friction and social pressures that often come along with creating and maintaining a website in 2018.</p>
 
-  <p>Although they may seem initially accommodating and convenient to their users, universally popular social media sites&mdash;like Facebook, Instagram, Snapchat, and Pinterest&mdash;are private companies that prioritize advertising above their users&rsquo; needs. Their users&rsquo; happiness is not the primary focus, so it&rsquo;s perfectly normal for you to feel anxiety when using or even thinking about social media. In this age of digital cacophony dominated by these platforms, no one is looking out for you&#8230; but you. It makes perfect sense, then, when individuals tell me they want their website to do the job of &ldquo;setting the record straight&rdquo; on who they are and what they do.</p>
+  <p>Although they may seem initially accommodating and convenient to their users, universally popular social media sites&mdash;like <a href="https://www.facebook.com/">Facebook</a>, <a href="https://www.instagram.com/">Instagram</a>, <a href="https://www.snapchat.com/">Snapchat</a>, and <a href="https://www.pinterest.com/">Pinterest</a>&mdash;are private companies that prioritize advertising above their users&rsquo; needs. Their users&rsquo; happiness is not the primary focus, so it&rsquo;s perfectly normal for you to feel anxiety when using or even thinking about social media. In this age of digital cacophony dominated by these platforms, no one is looking out for you&#8230; but you. It makes perfect sense, then, when individuals tell me they want their website to do the job of &ldquo;setting the record straight&rdquo; on who they are and what they do.</p>
 
   <p>However, clarity is one of many possible intentions for a website. There are other legitimate states of mind capable of communication&mdash;a surprising, memorable, monumental, soothing, shocking, unpredictable, radically boring, bizarre, mind-blowing, very quiet and subtle, and/or amazing website could work. You also need not limit yourself to only one website&mdash;as perhaps you&rsquo;d like to confuse or surprise with multiple.</p>
 
